dark mode fixes

--- a/src/style.css
+++ b/src/style.css
@@ -231,8 +231,6 @@ body {
 }
 
 .dark .viewboard > .pc > .user {
-    font-size: 30px;
-    size: 100px;
     margin: 30px auto;
     color: var(--dark-mode-color-5);
 }
